# LineKconfig

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
frontends/mconf/: mconf.c
libs/parser/: hconf.c
scripts/.autostuff/: config.h.in
